--- a/Rnn.ipynb
+++ b/Rnn.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,35 +149,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Iteration: 10  Loss: 1.4654203653335571  Accuracy: 32 %\n",
-      "Iteration: 20  Loss: 1.2775225639343262  Accuracy: 56 %\n",
-      "Iteration: 30  Loss: 1.2581512928009033  Accuracy: 58 %\n",
-      "Iteration: 40  Loss: 1.263122320175171  Accuracy: 58 %\n",
-      "Iteration: 50  Loss: 1.2494319677352905  Accuracy: 61 %\n",
-      "Iteration: 60  Loss: 0.4469497799873352  Accuracy: 59 %\n",
-      "Iteration: 70  Loss: 0.7470794916152954  Accuracy: 60 %\n",
-      "Iteration: 80  Loss: 0.44393637776374817  Accuracy: 62 %\n",
-      "Iteration: 90  Loss: 0.6927947998046875  Accuracy: 59 %\n",
-      "Iteration: 100  Loss: 0.3943200409412384  Accuracy: 54 %\n",
-      "Iteration: 110  Loss: 0.061345577239990234  Accuracy: 56 %\n",
-      "Iteration: 120  Loss: 0.3738337755203247  Accuracy: 55 %\n",
-      "Iteration: 130  Loss: 0.6713888645172119  Accuracy: 58 %\n",
-      "Iteration: 140  Loss: 0.47626158595085144  Accuracy: 56 %\n",
-      "Iteration: 150  Loss: 0.3577721118927002  Accuracy: 58 %\n",
-      "Iteration: 160  Loss: 0.1278609335422516  Accuracy: 58 %\n",
-      "Iteration: 170  Loss: 0.014733051881194115  Accuracy: 57 %\n",
-      "Iteration: 180  Loss: 0.12759162485599518  Accuracy: 61 %\n",
-      "Iteration: 190  Loss: 0.13125216960906982  Accuracy: 59 %\n",
-      "Iteration: 200  Loss: 0.4545586407184601  Accuracy: 57 %\n",
-      "Iteration: 210  Loss: 0.053621042519807816  Accuracy: 56 %\n",
-      "Iteration: 220  Loss: 0.023172123357653618  Accuracy: 58 %\n",
-      "Iteration: 230  Loss: 0.2332647740840912  Accuracy: 59 %\n",
-      "Iteration: 240  Loss: 0.1537885069847107  Accuracy: 59 %\n",
-      "Iteration: 250  Loss: 0.09699811786413193  Accuracy: 57 %\n",
-      "Iteration: 260  Loss: 0.03172735124826431  Accuracy: 58 %\n",
-      "Iteration: 270  Loss: 0.02134128101170063  Accuracy: 59 %\n",
-      "Iteration: 280  Loss: 0.004220280796289444  Accuracy: 59 %\n",
-      "Iteration: 290  Loss: 0.004344000946730375  Accuracy: 60 %\n"
+      "Iteration: 10  Loss: 1.5840939283370972  Accuracy: 30 %\n",
+      "Iteration: 20  Loss: 1.3395147323608398  Accuracy: 39 %\n",
+      "Iteration: 30  Loss: 1.3117599487304688  Accuracy: 52 %\n",
+      "Iteration: 40  Loss: 1.456087589263916  Accuracy: 58 %\n",
+      "Iteration: 50  Loss: 1.2119991779327393  Accuracy: 59 %\n",
+      "Iteration: 60  Loss: 0.45253363251686096  Accuracy: 61 %\n",
+      "Iteration: 70  Loss: 0.8311282992362976  Accuracy: 59 %\n",
+      "Iteration: 80  Loss: 0.40881621837615967  Accuracy: 62 %\n",
+      "Iteration: 90  Loss: 0.9112553596496582  Accuracy: 58 %\n",
+      "Iteration: 100  Loss: 0.4276775121688843  Accuracy: 58 %\n",
+      "Iteration: 110  Loss: 0.0912146270275116  Accuracy: 53 %\n",
+      "Iteration: 120  Loss: 0.5784710049629211  Accuracy: 55 %\n"
      ]
     }
    ],
@@ -206,8 +189,8 @@
     "accuracy_list = []\n",
     "count = 0\n",
     "for epoch in range(num_epochs):\n",
-    "    for i, (images, labels) in enumerate(train_loader):\n",
-    "        train  = Variable(images.view(-1, seq_dim, input_dim))\n",
+    "    for i, (signals, labels) in enumerate(train_loader):\n",
+    "        train  = Variable(signals.view(-1, seq_dim, input_dim))\n",
     "        labels = Variable(labels )\n",
     "            \n",
     "        # Clear gradients\n",
@@ -232,11 +215,11 @@
     "            correct = 0\n",
     "            total = 0\n",
     "            # Iterate through test dataset\n",
-    "            for images, labels in test_loader:\n",
-    "                images = Variable(images.view(-1, seq_dim, input_dim))\n",
+    "            for signals, labels in test_loader:\n",
+    "                signals = Variable(signals.view(-1, seq_dim, input_dim))\n",
     "                \n",
     "                # Forward propagation\n",
-    "                outputs = model(images.float())\n",
+    "                outputs = model(signals.float())\n",
     "                \n",
     "                # Get predictions from the maximum value\n",
     "                predicted = torch.max(outputs.data, 1)[1]\n",
