--- a/Rnn.ipynb
+++ b/Rnn.ipynb
@@ -160,7 +160,30 @@
       "Iteration: 90  Loss: 0.9112553596496582  Accuracy: 58 %\n",
       "Iteration: 100  Loss: 0.4276775121688843  Accuracy: 58 %\n",
       "Iteration: 110  Loss: 0.0912146270275116  Accuracy: 53 %\n",
-      "Iteration: 120  Loss: 0.5784710049629211  Accuracy: 55 %\n"
+      "Iteration: 120  Loss: 0.5784710049629211  Accuracy: 55 %\n",
+      "Iteration: 130  Loss: 0.5351635813713074  Accuracy: 60 %\n",
+      "Iteration: 140  Loss: 0.7218586206436157  Accuracy: 57 %\n",
+      "Iteration: 150  Loss: 0.20522741973400116  Accuracy: 58 %\n",
+      "Iteration: 160  Loss: 0.3935294449329376  Accuracy: 54 %\n",
+      "Iteration: 170  Loss: 0.214603990316391  Accuracy: 58 %\n",
+      "Iteration: 180  Loss: 0.30525413155555725  Accuracy: 58 %\n",
+      "Iteration: 190  Loss: 0.13162504136562347  Accuracy: 57 %\n",
+      "Iteration: 200  Loss: 0.31452134251594543  Accuracy: 55 %\n",
+      "Iteration: 210  Loss: 0.08713199943304062  Accuracy: 57 %\n",
+      "Iteration: 220  Loss: 0.026631228625774384  Accuracy: 59 %\n",
+      "Iteration: 230  Loss: 0.08247353881597519  Accuracy: 56 %\n",
+      "Iteration: 240  Loss: 0.04067300260066986  Accuracy: 59 %\n",
+      "Iteration: 250  Loss: 0.04391688480973244  Accuracy: 58 %\n",
+      "Iteration: 260  Loss: 0.014820676296949387  Accuracy: 60 %\n",
+      "Iteration: 270  Loss: 0.01319634635001421  Accuracy: 60 %\n",
+      "Iteration: 280  Loss: 0.08621641993522644  Accuracy: 53 %\n",
+      "Iteration: 290  Loss: 0.015294828452169895  Accuracy: 59 %\n",
+      "Iteration: 300  Loss: 0.031168675050139427  Accuracy: 58 %\n",
+      "Iteration: 310  Loss: 0.022427206858992577  Accuracy: 58 %\n",
+      "Iteration: 320  Loss: 0.004267849959433079  Accuracy: 58 %\n",
+      "Iteration: 330  Loss: 7.89006517152302e-05  Accuracy: 57 %\n",
+      "Iteration: 340  Loss: 0.03649679571390152  Accuracy: 56 %\n",
+      "Iteration: 350  Loss: 0.12992268800735474  Accuracy: 60 %\n"
      ]
     }
    ],
