updates rnn, cnn, and preprocess_util to look for data in folder

--- a/Models/RNN.ipynb
+++ b/Models/RNN.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,21 +16,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_test = np.load(\"X_test.npy\")\n",
-    "y_test = np.load(\"y_test.npy\")\n",
-    "person_train_valid = np.load(\"person_train_valid.npy\")\n",
-    "X_train_valid = np.load(\"X_train_valid.npy\")\n",
-    "y_train_valid = np.load(\"y_train_valid.npy\")\n",
-    "person_test = np.load(\"person_test.npy\")\n"
+    "X_test = np.load(\"../Data/X_test.npy\")\n",
+    "y_test = np.load(\"../Data/y_test.npy\")\n",
+    "person_train_valid = np.load(\"../Data/person_train_valid.npy\")\n",
+    "X_train_valid = np.load(\"../Data/X_train_valid.npy\")\n",
+    "y_train_valid = np.load(\"../Data/y_train_valid.npy\")\n",
+    "person_test = np.load(\"../Data/person_test.npy\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,14 +44,12 @@
     "for y in y_test:\n",
     "    value = np.abs(769-y)\n",
     "    Y_test.append(value)\n",
-    "Y_test = np.array(Y_test)\n",
-    "\n",
-    "\n"
+    "Y_test = np.array(Y_test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -78,7 +76,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# create feature and targets tensor for train set.  we create tensor, then we will create variable\n",
+    "# create feature and targets tensor for train set. we create tensor, then we will create variable\n",
     "featuresTrain = torch.from_numpy(X_train_valid)\n",
     "targetsTrain = torch.from_numpy(Y_train).type(torch.LongTensor) # data type is long\n",
     "\n",
@@ -137,7 +135,7 @@
     "        # One time step\n",
     "        out, hn = self.rnn(x, h0)\n",
     "        out = self.fc(out[:, -1, :]) \n",
-    "        return out\n"
+    "        return out"
    ]
   },
   {
@@ -1233,7 +1231,6 @@
     }
    ],
    "source": [
-    "\n",
     "# Create RNN\n",
     "dtype = torch.FloatTensor\n",
     "input_dim = 1000    # input dimension\n",
@@ -1305,15 +1302,9 @@
     "            accuracy_list.append(accuracy)\n",
     "            if count % 1 == 0:\n",
     "                # Print Loss\n",
-    "                print('Iteration: {}  Loss: {}  Accuracy: {} %'.format(count, loss.data, accuracy))"
+    "                print('Iteration: {}  Loss: {}  Accuracy: {} %'.format(count, loss.data, accuracy))\n",
+    "                "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
