--- a/Models/RNN.ipynb
+++ b/Models/RNN.ipynb
@@ -2,10 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Remove before pushing to github\n",
+    "import sys\n",
+    "sys.path.append('/Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/site-packages')\n",
+    "\n",
     "# Fix for issue loading Utils.preprocess_util\n",
     "import os, sys\n",
     "module_path = os.path.abspath(os.path.join('..'))\n",
@@ -13,51 +17,56 @@
     "    sys.path.append(module_path)\n",
     "\n",
     "import numpy as np\n",
-    "import pandas as pd\n",
-    "import scipy\n",
-    "import scipy.signal\n",
     "import torch\n",
     "import torch.utils.data\n",
     "import torch.nn as nn\n",
     "import torch.optim as optim\n",
     "from torch.autograd import Variable\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from Utils.preprocess_util import *\n"
+    "from Utils.preprocess_util import *\n",
+    "from Utils.visualize import *\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training data shape: (1417, 22, 1000)\n",
+      "Training target shape: (1417,)\n",
+      "Validation data shape: (698, 22, 1000)\n",
+      "Validation target shape: (698,)\n",
+      "Test data shape: (443, 22, 1000)\n",
+      "Test target shape: (443,)\n",
+      "\n",
+      "Person train/validation shape: (2115, 1)\n",
+      "Person test shape: (443, 1)\n"
+     ]
+    }
+   ],
    "source": [
     "X_train,X_valid,X_test,Y_train,Y_valid,Y_test = load_preprocess_eeg_data()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
    "source": [
-    "def get_accuracy(ouput, target, batch_size):\n",
-    "    ''' Obtain accuracy for training round '''\n",
-    "    classes_predicted = torch.max(ouput, 1)[1]\n",
-    "    corrects = (np.equal(classes_predicted.tolist(),target.tolist()).astype(int)).sum()\n",
-    "    # corrects = (max_values[1].view(target.size()).data == target.data).sum()\n",
-    "    accuracy = 100.0 * corrects/batch_size\n",
-    "    return accuracy.item()\n",
+    "print(np.max(Y_test))\n",
     "\n",
-    "def threeD_to_fourDTensor(X):\n",
-    "    return Variable(torch.tensor(X.reshape((X.shape[0],1,X.shape[1],X.shape[2],))))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# create feature and targets tensor for train set\n",
     "# we create tensor, then we will create variable\n",
     "features_train = torch.from_numpy(X_train)\n",
